# gfisher_data_hierarchical_model

./: pyproject.toml  requirements_gtx1080.txt
docs/: README.md
gfisher_data_hierarchical_model/: gfisher_hierarchical_model.py
gfisher_data_hierarchical_model/models/: hierarchical_gfisher.yaml  hierarchicalgfisheryolov8.yaml
notebooks/: gfisher_training.ipynb  hierarchical_gfisher.ipynb
