[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "GFISHER_hierarchical_model"
version = "0.1.0"
description = "Hierarchical model training pipeline on GFISHER data"
authors = [
    { name = "CScott Brown" },
]
dependencies = [
  "hierarchical_yolo @ git+https://github.com/csbrown-noaa/hierarchical_yolo.git",
  "ultralytics",
  "torch"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
